--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: SpeedCoder5
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Data Scientist, Software Developer, Mach5 Racer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars1.githubusercontent.com/u/4202850?v=3&amp;s=460
 
 #
 # Flags below are optional
